fix detection